manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-lab-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guestbook-lab
  template:
    metadata:
      labels:
        app: guestbook-lab
    spec:
      automountServiceAccountToken: false
      containers:
       - name: guestbook-lab
         image: milydemendoza/guestbook-lab:1.0.3
         resources:
           requests:
             cpu: "500m"
             memory: "256Mi"
             ephemeral-storage: "1Gi"
           limits:
             cpu: "1"
             memory: "512Mi"
             ephemeral-storage: "2Gi"
         ports:
         - containerPort: 8082
           name: http
