manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-lab-service
spec:
  selector:
    app: guestbook-lab
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
