manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mily-guestbook-lab-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mily-guestbook-lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mily-guestbook-lab-service
            port:
              number: 8082
